Work with authorization

--- a/WinPhoneTwt.BusinessLogic/WinPhoneTwt.BusinessLogic.csproj
+++ b/WinPhoneTwt.BusinessLogic/WinPhoneTwt.BusinessLogic.csproj
@@ -79,7 +79,10 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Helpers\LoginPageHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Autofac">
@@ -128,6 +131,7 @@
       <HintPath>..\..\TestLibrary\TestLibrary\Bin\Debug\Tweetinvi.WebLogic.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
